# Mencus

./: .gitignore  CMakeLists.txt  COPYRIGHT  LICENCE.md  LICENSE  README.md  add_copyright.py  build_android.sh
CodeBlocks/: .gitignore  FileConverter.cbp  Mencus.cbp
FileConverter/: CMakeLists.txt  FileConverter.cpp
Game/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AdDisplayManager.cpp  AdDisplayManager.hpp  AnimatedSprite.cpp  AnimatedSprite.hpp  Assert.hpp  Background.cpp  Background.hpp  BarIndicator.hpp  BoundingBox2d.hpp  CMakeLists.txt  CameraRestriction.hpp  ChangeTileEvent.cpp  ChangeTileEvent.hpp  CheatDefines.hpp  CollisionDefines.hpp  Constants.hpp  DebugDefines.hpp  DebugDrawer.cpp  DebugDrawer.hpp  DebugText.cpp  DebugText.hpp  Enemy.cpp  Enemy.hpp  Entity.cpp  Entity.hpp  Event.cpp  Event.hpp  EventCreator.cpp  EventEmitter.hpp  Exit.cpp  Exit.hpp  Explosion.cpp  Explosion.hpp  Fader.hpp  FileManager.cpp  FileManager.hpp  GUICredits.hpp  GUIGameOver.cpp  (+122 more)
Game/Android/: Android.hpp  AndroidInput.hpp  Logger.hpp  OgreStaticPluginLoader.h
Game/EditBoxes/: EditBoxBase.hpp  EditBoxExit.hpp  EditBoxFloat.hpp  EditBoxListener.hpp  EditBoxString.hpp  EditBoxText.hpp  EditBoxTileType.hpp  EditBoxUIntVector2.hpp
Game/Events/: ChangeTileEvent.cpp  ChangeTileEvent.hpp  CreateEvent.cpp  CreateEvent.hpp  Event.cpp  Event.hpp  EventCreator.cpp  EventCreator.hpp  EventEmitter.cpp  EventEmitter.hpp  InjectMessageEvent.cpp  InjectMessageEvent.hpp  MessageEvent.cpp  MessageEvent.hpp  ToggleEvent.cpp  ToggleEvent.hpp
Game/OSX/: OSX.hpp
Game/Plugins/: GUILevelSelect.cpp  GUILevelSelect.hpp  GUIOverlay.hpp  GUIToolsMenu.cpp  GUIToolsMenu.hpp
Game/Plugins/GUISettings/: GUIInputSettings.cpp  GUIInputSettings.hpp  GUISettingsWindow.cpp  GUISettingsWindow.hpp  GUIVideoSettings.cpp  GUIVideoSettings.hpp
Game/Plugins/SocialGaming/: AchievementProgressTester.cpp  AchievementProgressTester.hpp  Achievements.hpp  DefaultGameData.cpp  DefaultGameData.hpp  GameCircle.cpp  GameCircle.hpp  GameData.hpp  Leaderboards.hpp  MessageTypes.hpp  Overlay.cpp  Overlay.hpp  SocialGaming.cpp  SocialGaming.hpp  SocialGamingConnectionInterface.cpp  SocialGamingConnectionInterface.hpp  WhispersyncGameData.cpp  WhispersyncGameData.hpp
Game/XMLResources/: Manager.cpp  Manager.hpp
MapUpgrader/: CMakeLists.txt  FromNothingToVersion1.hpp  FromVersion1To2.hpp  MapUpgrader.cpp  UpgradeBase.hpp  UpgradeResult.hpp
ResourcesJar/Buttons/: buttons_keyboard.imageset
VisualStudio2013/: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Mencus.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
VisualStudio2013/FileConverter/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  FileConverter.sln  FileConverter.vcxproj  FileConverter.vcxproj.filters
VisualStudio2013/Game/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Game.sln  Game.vcxproj  Game.vcxproj.filters
android/assets/: api_key.txt
android/res/layout/: activity_mencus.xml
cegui/fonts/: OgreFontDef.fontdef
cegui/imagesets/: .gitignore  game_over.imageset  hud.imageset  hud_weapons.imageset  instr.imageset  main_menu_background.imageset  save_pictures.imageset  social_gaming_logos.imageset  white.imageset
cegui/looknfeel/: OgreTray.looknfeel
cegui/schemes/: OgreTray.scheme
cmake/: FindCEGUI.cmake  FindOgre.cmake
cmake/templates/: Android.mk.in  AndroidManifest.xml.in  GlobalBuildDefines.hpp.in  resources.cfg.in
cmake/toolchain/: AddSdkPaths.cmake  AmazonGameCircle.cmake  AndroidGame.cmake  CopyButtonImageset.cmake  CopyLevelFiles.cmake  CreateGlobalDefines.cmake
credits/: credits
dependencies/OgreSdkUtil/: SdkTrays.h
gfx/game/: .gitignore
gfx/game/tiles/: make_atlas.sh
gfx/objects/bomb/: LICENCE
gfx/working_files/app_store/: Logo.xcf  achievements.xcf  ad.xcf  function_graphics.xcf
gfx/working_files/background/: clouds.psd  fog.psd  stars.psd
gfx/working_files/hud/: buttons_amazon_remote_control.xcf  buttons_keyboard.xcf  hud_main.xcf  indicator_box.xcf  weapons.xcf
gfx/working_files/mainmenu/: Lock.xcf  SavePictures.xcf  SocialGamingLogos.xcf
gfx/working_files/mencus/: Column.psd  Column2.psd  Schild.psd  Schild2.psd
gfx/working_files/objects/: Flag.xcf  bomb.blend  bomb.psd  bomb.xcf  bomb_explosion_1.psd  bomb_explosion_2.psd  bomb_explosion_3.psd  bomb_explosion_4.psd  bomb_explosion_5.psd  bomb_explosion_6.psd  bomb_explosion_7.psd  health_potion.psd  key.blend  key.psd  mana_potion.psd  scratch.psd  torch.blend  torch.psd
gfx/working_files/tiles/: Block.xcf  BlockFull.xcf  Door1.psd  Door1.xcf  Erde.psd  Fence.xcf  Soil_Grass.xcf  Tile52.psd  Tile67-68.psd  Tree.xcf  WoodDoor.xcf  WoodDoor_Single.xcf  WoodLink.xcf
language/values/: strings.xml
language/values-de/: strings.xml
level/: .gitignore  level_list.xml  screenplay.xml
level/level1/: instructions.txt  scene3.xml
level/level2/: instructions.txt  scene2.xml  scene3.xml
level/level3/: instructions.txt  scene1.xml
level/level4/: instructions.txt  scene1.xml
level/level5/: instructions.txt  scene1.xml  scene2.xml
level/level6/: scene1.xml
level/mencus_campaign/: screenplay.xml
level/mencus_campaign/level1/: scene3.xml
level/mencus_campaign/level2/: scene2.xml  scene3.xml
level/mencus_campaign/level3/: scene2.xml
level/mencus_campaign/level4/: scene2.xml
level/mencus_campaign/level5/: scene2.xml  scene3.xml
level/mencus_campaign/level6/: instructions.txt  scene1.xml
level/user/: Adventure.xml  Castle_1.xml  Castle_2.xml  Cave_Passage_1.xml  Cave_Passage_2.xml  Escape.xml  Labyrinth.xml  Simple_Pathway.xml  Test.xml  TreeOfLife.xml  Tutorial.xml  Tutorial_1.xml  Tutorial_2.xml  Tutorial_3.xml  Tutorial_4.xml  Tutorial_5.xml  generate_packs.py  generate_packs.sh  testnewmap.xml  upgrade_all_map_files.sh
level/user/Adventure/: Adventure.xml
level/user/Castle_1/: Castle_1.xml
level/user/Castle_2/: Castle_2.xml
level/user/Cave_Passage_1/: Cave_Passage_1.xml
level/user/Cave_Passage_2/: Cave_Passage_2.xml
level/user/Escape/: Escape.xml
materials/: default.material
overlays/: fade.overlay
(+58 files in other folders)
